more progress for this week

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -236,7 +236,7 @@
 \newcommand{\Xspin}{X_{\mathrm{spin}}}
 \newcommand{\Xdown}{X_{\mathrm{down}}}
 \newcommand{\Xup}{X_{\mathrm{up}}}
-
+\newcommand{\elltot}{\ell_{\mathrm{tot}}}
 \renewcommand{\labelitemi}{$\bullet$}
 \renewcommand{\labelitemii}{$\bullet$}
 \renewcommand{\labelitemiii}{$\bullet$}
@@ -280,6 +280,7 @@
 
 \theoremstyle{mythmstyle}
 \newtheorem{mydef}{Definition}[section]
+\newtheorem{myex}{Example}[section]
 \newtheorem{mythm}{Theorem}[section]
 \newtheorem{mylemma}{Lemma}[section]
 \newtheorem{mycor}{Corollary}[section]
