--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
@@ -1,20 +1,25 @@
 \section{Total constructions}
 \chcomment[id=Greg]{Moved all ``totaling'' stuff into a section}
-We wish to make computations that combine contributions from every face of a combinatorial manifold.
+We wish to make computations that combine contributions from every face of a combinatorial manifold. To do this we will add some structure and then prove that the definitions are independent of that structure.
 
-\subsection{Total holonomy}
 \begin{mydef}
-The \defemph{triangular lasso \( L_n:\Type \) with tail of length \( n \)} (Figure~\ref{fig:lasso}) is a 1-type given by:
+A \defemph{total enumeration of faces} for a combinatorial 2-manifold \( \mm \) with underlying simplicial complex \( M=[M_0, M_1, M_2] \) consists of
 \begin{itemize}
-\item a set of tail vertices \( p_1,\ldots,p_n \)
-\item triangle vertices \( v_1, v_2, v_3 \)
-\item tail edges \( e_i:p_i=_L p_{i-1}, i=1,\ldots,n-1 \)
-\item edge \( e_n:p_n=_L v_1 \)
-\item triangle edges \( e_ij:v_i=_L v_j \)
+\item A ``master basepoint'' \( m:M_0 \).
+\item For each face \( F:M_2 \) with vertices \( \{v_1, v_2, v_3\} \) an enumeration of its vertices \( [v_1, v_2, v_3] \), including the choice of the first vertex in the enumeration as the basepoint of \( F \), that is \defemph{globally compatible} with the choices for the other faces, meaning that when two faces \( F_1,F_2 \) share an edge \( \{v, w\} \), then one of the faces includes the sublist \( [v, w] \) and the other includes \( [w, v] \).
+\item An ordering of the faces \( [F_1,\ldots,F_n] \).
+\item For each face \( F \) a path \( p_F:m=_\mm F_v \). This is the only ingredient that uses the type \( \mm \). 
 \end{itemize}
-The loop \( \ell_L \) determined by the lasso is the concatenation along the tail towards the triangle, then around the triangle, then backward along the tail:\[ e_1\cdot\cdots\cdot e_n\cdot e_{12}\cdot e_{23} \cdot e_{31}\cdot e_n^{-1}\cdot\cdots\cdot e_1^{-1}. \]
-Define the special case \( n=0 \) to have an empty tail with \( p_1\defeq v_1 \) and \( e_1\defeq\refl_{v_1} \), so includes only the triangle.
 \end{mydef}
+
+For example, for the octahedron we might choose \( b \) as the master basepoint, as well as the basepoint for four of the faces. For the other four faces we could choose \( g \) as the basepoint. We could choose \( br\cdot rg \) as the path between the basepoints, and we could order the faces like this: \( [bwo, brw, boy, byr, gow, gwr, gry, gyo] \).
+
+For a single face \( F \), the concatenation \( \ell_F\defeq p_F\cdot e_{12}\cdot e_{23}\cdot e_{31}\cdot p_F^{-1} \) is a loop around \( F \) based at \( m \). The concatenation \( \ell_{F_1}\cdot\cdots\cdot\ell_{F_n} \) is a loop that visits each face once.
+
+\begin{mydef}
+Given a total enumeration of faces, the concatenation \( \elltot\defeq\ell_{F_1}\cdot\cdots\cdot\ell_{F_n} \) is called \defemph{the total loop} of the enumeration.
+\end{mydef}
+
 \begin{figure}[h]
 \centering
 \begin{tikzpicture}[arrow/.style={-{Stealth[scale=1.1]}}]
@@ -23,21 +28,18 @@ Define the special case \( n=0 \) to have an empty tail with \( p_1\defeq v_1 \)
     \node[internal, label=above:\( v_2 \)] (A) at (1, 1.732) {}; % Top vertex
     \node[internal, label=below:\( v_1 \)] (B) at (0, 0) {};     % Left vertex
     \node[internal, label=below:\( v_3 \)] (C) at (2, 0) {};     % Right vertex
+    \node (Face) at (1, 0.85) {\( F \)}; % Top vertex
 
     % Draw the equilateral triangle with black vertices
     \draw[arrow] (A) edge["\( e_{23} \)"] (C);
     \draw[arrow] (B) edge["\( e_{12} \)"] (A);
-    \draw[arrow] (C) edge[swap, "\( e_{31} \)"] (B);
+    \draw[arrow] (C) edge["\( e_{31} \)"] (B);
     
-    % Define coordinates for the three additional vertices on the line segment
-    \node[internal, label=below:\( p_n \)] (D) at (-1, 0) {}; % First vertex to the left of B
-    \node[internal, label=below:\( p_2 \)] (E) at (-2, 0) {}; % Second vertex
-    \node[internal, label=below:\( p_1 \)] (F) at (-3, 0) {}; % Third vertex
+    \node[internal, label=left:\( m \)] (F) at (-3, 0) {};
 
     % Draw the line segment from B through D, E, F
-    \draw[arrow] (F) edge["\( e_1 \)"] (E);
-    \draw[thick, dashed] (E)--(D);
-    \draw[arrow] (D) edge["\( e_n \)"] (B);
+    \draw[arrow] (F) edge["\( p\to \)"] (B);
+    \draw[arrow] (B) edge["\( \leftarrow p^{-1} \)"] (F);
     
 
     % Add black circles at each vertex of the triangle
@@ -45,33 +47,21 @@ Define the special case \( n=0 \) to have an empty tail with \( p_1\defeq v_1 \)
     \fill [black] (B) circle (2pt);
     \fill [black] (C) circle (2pt);
     
-    % Add black circles at each additional vertex
-    \fill [black] (D) circle (2pt);
-    \fill [black] (E) circle (2pt);
     \fill [black] (F) circle (2pt);
 \end{tikzpicture}
-\caption{The lasso \( L_n \), a triangle with a tail, for probing manifolds.}
+\caption{A loop \( \ell_F:m=_\mm m \) around the face \( F \).}
 \label{fig:lasso}
 \end{figure}
 
-The purpose of this type is to probe combinatorial manifolds in an organized fashion, by mapping \( L \) into the type \( \mm \).
 
-\begin{mydef}
-\label{def:face_enumerator}
-Let \( M \) be a combinatorial 2-manifold with \( k=\#M_2 \) 2-faces, and \( \mm \) its realization as a marked presented type. A \defemph{face enumerator of maximum length \( n \)} for \( \mm \) is a set of \( k \) maps \( \pi_1,\ldots,\pi_k:L_n\to \mm \) such that \( \pi_i(p_1)=m \) for all \( i \), where \( m:\mm \) is a chosen basepoint. We further require that each edge in \( \mm \) is visited an even number of times, an equal number of times in each direction. This set of data is equivalent to specifying a base point \( m:\mm \), a base point \( f_i \) on the boundary of each face, fixed paths \( m=_\mm f_i \), and a uniform orientation for all faces (all clockwise or counterclockwise). It is convenient to fix one value of \( n \) for all the lassos, even if some lassos only need a shorter tail (in which case they can repeat some values and use \( \refl \) for some of the tail).
-\end{mydef}
-
-Given a face enumerator we can form the compositions \( T\circ\ell_{L,i} \) with the associated loop to obtain transport isomorphisms \( T\circ\ell_{L,i}:Tm=Tm \). We can concatenate all the loops \( \ell_{L,1}\cdot\cdots\cdot\ell_{L,k} \) and obtain a \emph{total holonomy} \( T\circ(\ell_{L,1}\cdot\cdots\cdot\ell_{L,k}):Tm=Tm  \).
-
-\begin{mylemma}
-The total holonomy of \( T_1 \) on \( \oo \)(Definition~\ref{def:octahedron_holonomy}) is \( R^8=\) which is two full rotations of \( C_4 \).
-\end{mylemma}
+\subsection{Total holonomy}
+Given a total enumeration of faces we can form the compositions \( T\circ\ell_{F_i} \) with the associated loop to obtain transport isomorphisms \( T\circ\ell_{F_i}:Tm=Tm \). We can concatenate all the loops \( \ell_{F_1}\cdot\cdots\cdot\ell_{F_n} \) and obtain a \emph{total holonomy} \( T\circ(\ell_{F_1}\cdot\cdots\cdot\ell_{F_n}):Tm=Tm  \).
 
 \begin{myprop}
-For a marked presented manifold \( \mm=\mrlzn(M) \) the total holonomy does not depend on the choices of the face enumerator.
+The total holonomy is conjugated if we change the paths \( p_{F_i} \) of the face enumerator, or the basepoint \( m \). In particular, if the automorphism groups of the fibers are abelian then the total holonomy is invariant. The total holonomy becomes the inverse automorphism if we change the enumeration of all the faces.
 \end{myprop}
 \begin{proof}
-We will prove that changing the image of a point in the tail to an adjacent vertex does not affect the result. We will then prove that moving the master basepoint \( m \) to an adjacent vertex does not affect the result. The full result follows by concatenating such proofs. Figure~\ref{fig:tail_move} shows the image in \( \mm \) of two functions \( f, g \) on a segment of the tail. If \( f \) and \( g \) agree on the rest of the lasso, how is total holonomy affected? We will traverse this segment twice: left to right, then later from right to left. When moving to the right we must compare \( g(e_i)\cdot g(e_{i+1}) \) to \( f(e_i)\cdot f(e_{i+1}) \). There is a filler \( H:f(e_i)\cdot f(e_{i+1})=g(e_i)\cdot g(e_{i+1}) \) and so if the holonomy around the lasso \( f(L) \) is \[ f(e_1)\cdot\cdots\cdot f(e_i)\cdot f(e_{i+1})\cdot\cdots\cdot f(e_{i+1})^{-1}\cdot f(e_i)^{-1}\cdot\cdots f(e_1)^{-1} \] then there is a path \[ f(e_1)\cdot\cdots\cdot H\cdot\cdots\cdot H^{-1}\cdot\cdots f(e_1)^{-1} \] from \( f(L) \) to \( g(L) \).
+We will prove that changing a point in some fixed \( p_F \) to an adjacent vertex conjugates the holonomy. We will then prove that moving the master basepoint \( m \) to an adjacent vertex does not affect the result. The full result follows by concatenating such proofs. Figure~\ref{fig:tail_move} shows the image in \( \mm \) of two functions \( f, g \) on a segment of the tail. If \( f \) and \( g \) agree on the rest of the lasso, how is total holonomy affected? We will traverse this segment twice: left to right, then later from right to left. When moving to the right we must compare \( g(e_i)\cdot g(e_{i+1}) \) to \( f(e_i)\cdot f(e_{i+1}) \). There is a filler \( H:f(e_i)\cdot f(e_{i+1})=g(e_i)\cdot g(e_{i+1}) \) and so if the holonomy around the lasso \( f(L) \) is \[ f(e_1)\cdot\cdots\cdot f(e_i)\cdot f(e_{i+1})\cdot\cdots\cdot f(e_{i+1})^{-1}\cdot f(e_i)^{-1}\cdot\cdots f(e_1)^{-1} \] then there is a path \[ f(e_1)\cdot\cdots\cdot H\cdot\cdots\cdot H^{-1}\cdot\cdots f(e_1)^{-1} \] from \( f(L) \) to \( g(L) \).
 \end{proof}
 
 \begin{figure}[h]
@@ -100,31 +90,12 @@ We will prove that changing the image of a point in the tail to an adjacent vert
 \caption{Two images of a part of the lasso tail.}
 \label{fig:tail_move}
 \end{figure}
-\begin{comment}
-\subsection{The torus}
 
-We can define a combinatorial torus as a similar HIT. This time each vertex will have six neighbors. So all the links will be merely equal to \( C_6 \) which is a hexagonal version of \( C_4 \). See Figure~\ref{fig:torus}. 
+\begin{myex}
+The total holonomy of \( T_1 \) on \( \oo \) (Definition~\ref{def:octahedron_holonomy}) is \( R^8=\) which is two full rotations of \( C_4 \).
+\end{myex}
 
-To help parse this figure, imagine instead Figure~\ref{fig:flattorus}. We take this simple alternating-triangle pattern, then glue the left and right edges, then bend into Figure~\ref{fig:torus}. The fact that each column in Figure~\ref{fig:flattorus} has four dots corresponds to the torus in Figure~\ref{fig:torus} having a square in front, diamonds in the middle, and a square in back.
 
-\begin{figure}[h]
-\centering
-\input{discrete_gauge_theory_torus_tikz}
-\caption{Torus embedded in 3-dimensional space. If you see color in your rendering then black lines trace four square-shaped paths, red ones connect the front square to the middle diamonds, and blue ones connect the back path to the middle ones.}
-\label{fig:torus}
-\end{figure}
-
-\begin{figure}[h]
-\centering
-\input{discrete_gauge_theory_torusflat_tikz}
-\caption{An inspiration for the torus. Identify the sides and then the top, definitionally, to get the actual torus.}
-\label{fig:flattorus}
-\end{figure}
-
-This somewhat arbitrary and unfamiliar model of a torus has the helpful property that it is a combinatorial manifold that is somewhat minimal while still being representable by a donut shape. But the donut-shaped version suggests a very different connection than the flat model! Starting with the flat model, we can easily see how to define \( T_1 \) by sliding a link rigidly along the page to the link of some adjacent vertex. Then we can see that transport around any loop is the identity and so \( T_2 \) is always the identity (together with the homotopy \( \refl_\id \) from the identity to itself). So if we imagine a way to visit every face like we did for the octahedron, starting and ending at some basepoint \( v \), we expect to see no net rotation at all of \( Tv \). Later we will call this ``total curvature 0.''
-
-The donut-shaped torus suggests a different connection, one determined by the embedding in 3-space that we have represented. But the easiest way to think about that bundle and its connection and curvature is to wait until we have a proof of the Poincaré-Hopf theorem, so that we can instead compute with a vector field.
-\end{comment}
 
 \subsection{Total index of a vector field: subtracting curvature}
 
